Add static scriptable pokemon & code cleanup
Change: added a byte to the settings serialization to make room for a scripted static pokemon option

Change: Put the ScriptInstance into the Settings class as a member to have it integrate better with romhandler functions

Change: Added Settings as an argument to several functions used by static pokemon selection to be able to integrate scripting into their functionality

Add: an option to script the selection of static pokemon with an example function added to the script when selected

Change: The comments on the starter selection example function to add a description of the expected return value

--- a/src/com/dabomstew/pkrandom/newgui/NewRandomizerGUI.form
+++ b/src/com/dabomstew/pkrandom/newgui/NewRandomizerGUI.form
@@ -1106,6 +1106,16 @@
                       <toolTipText resource-bundle="com/dabomstew/pkrandom/newgui/Bundle" key="GUI.stpFixMusicAllCheckBox.toolTipText"/>
                     </properties>
                   </component>
+                  <component id="5691d" class="javax.swing.JRadioButton" binding="stpScriptedRadioButton">
+                    <constraints>
+                      <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <gridbag weightx="0.0" weighty="0.0"/>
+                    </constraints>
+                    <properties>
+                      <enabled value="false"/>
+                      <text value="Scripted"/>
+                    </properties>
+                  </component>
                 </children>
               </grid>
               <grid id="f2cab" layout-manager="GridBagLayout">
@@ -3872,6 +3882,7 @@
       <member id="66089"/>
       <member id="17456"/>
       <member id="282a5"/>
+      <member id="5691d"/>
     </group>
     <group name="tradeButtonGroup">
       <member id="4e02b"/>
