Add scripted in-game trades & Remove word wrap from scripting input

--- a/src/com/dabomstew/pkrandom/newgui/NewRandomizerGUI.form
+++ b/src/com/dabomstew/pkrandom/newgui/NewRandomizerGUI.form
@@ -1241,6 +1241,17 @@
                       <toolTipText resource-bundle="com/dabomstew/pkrandom/newgui/Bundle" key="GUI.igtRandomizeItemsCheckBox.toolTipText"/>
                     </properties>
                   </component>
+                  <component id="913b6" class="javax.swing.JRadioButton" binding="igtScriptedRadioButton">
+                    <constraints>
+                      <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <gridbag weightx="0.0" weighty="0.0"/>
+                    </constraints>
+                    <properties>
+                      <enabled value="false"/>
+                      <text value="Scripted"/>
+                      <toolTipText value="Use scripting to select given and requested pokemon"/>
+                    </properties>
+                  </component>
                 </children>
               </grid>
             </children>
@@ -3658,7 +3669,7 @@
               </vspacer>
             </children>
           </grid>
-          <grid id="ccd2" binding="scriptingPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="ccd2" binding="scriptingPanel" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="Scripting">
@@ -3672,7 +3683,9 @@
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
-                <properties/>
+                <properties>
+                  <foreground color="-4473925"/>
+                </properties>
                 <border type="none"/>
                 <children>
                   <component id="dd825" class="javax.swing.JTextPane" binding="sScriptInput" custom-create="true">
@@ -3690,19 +3703,6 @@
                   </component>
                 </children>
               </scrollpane>
-              <vspacer id="4bd42">
-                <constraints>
-                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                </constraints>
-              </vspacer>
-              <component id="bee8" class="javax.swing.JButton" binding="sTestButton">
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Button"/>
-                </properties>
-              </component>
             </children>
           </grid>
         </children>
@@ -3907,6 +3907,7 @@
       <member id="4e02b"/>
       <member id="a626c"/>
       <member id="f6c7b"/>
+      <member id="913b6"/>
     </group>
     <group name="pokemonMovesetButtonGroup">
       <member id="b296a"/>
