--- a/src/com/dabomstew/pkrandom/newgui/NewRandomizerGUI.form
+++ b/src/com/dabomstew/pkrandom/newgui/NewRandomizerGUI.form
@@ -2491,6 +2491,17 @@
                       <toolTipText resource-bundle="com/dabomstew/pkrandom/newgui/Bundle" key="GUI.wpAllowAltFormesCheckBox.toolTipText"/>
                     </properties>
                   </component>
+                  <component id="142d1" class="javax.swing.JRadioButton" binding="wpScriptedRadioButton">
+                    <constraints>
+                      <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <gridbag weightx="0.0" weighty="0.0"/>
+                    </constraints>
+                    <properties>
+                      <enabled value="false"/>
+                      <text value="Scripted"/>
+                      <toolTipText value="Use scripting to select wild pokemon"/>
+                    </properties>
+                  </component>
                 </children>
               </grid>
               <hspacer id="731f9">
@@ -3920,6 +3931,7 @@
       <member id="17061"/>
       <member id="4abec"/>
       <member id="44917"/>
+      <member id="142d1"/>
     </group>
     <group name="wildPokemonAdditionalButtonGroup">
       <member id="6fd8b"/>
